fix(blocks): map align* classes to text-align for datetime and location blocks
supports.align left/center/right adds aligncenter etc. (block centering)
not has-text-align-* (text alignment). Explicit CSS rules bridge the gap.
Row orientation also gets justify-content for center/right flex alignment.

--- a/blocks/field-ends-at/src/style.css
+++ b/blocks/field-ends-at/src/style.css
@@ -2,6 +2,10 @@
 	margin-inline-start: 0;
 }
 
+.wp-block-aucteeno-field-ends-at.alignleft { text-align: left; }
+.wp-block-aucteeno-field-ends-at.aligncenter { text-align: center; }
+.wp-block-aucteeno-field-ends-at.alignright { text-align: right; }
+
 .wp-block-aucteeno-field-ends-at.is-orientation-row > dl {
 	display: flex;
 	flex-direction: row;
@@ -9,3 +13,6 @@
 	flex-wrap: wrap;
 	gap: 0.25em;
 }
+
+.wp-block-aucteeno-field-ends-at.aligncenter.is-orientation-row > dl { justify-content: center; }
+.wp-block-aucteeno-field-ends-at.alignright.is-orientation-row > dl { justify-content: flex-end; }
